<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lolchair</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lolchair">lolchair</string>
    <string name="about_text">This is the official app for lolchair.com, helping you to enjoy faces on inanimate objects everywhere!</string>
    <string name="visit_website">Visit website</string>
    <string name="link_website"><a href="http://www.lolchair.com">www.lolchair.com</a></string>
    <string name="visit_facebook">Facebook</string>
    <string name="link_facebook"><a href="https://www.facebook.com/lolchair">www.facebook.com/lolchair</a></string>
    <string name="visit_google">Google+</string>
    <string name="link_google"><a href="https://plus.google.com/+Lolchairlol">plus.google.com/+Lolchairlol</a></string>
    <string name="submit">Submit</string>
    <string name="title_activity_submit">Submit a picture</string>
    <string name="add_message_to_submission">Add a message here (optional)</string>
    <string name="rate">Rate!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="submitting_picture">Submitting picture ...</string>
    <string name="submission_done">Submission done!</string>

</resources>