<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuAbout"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/menuSubmit"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/submit"> 
        <menu>
            <item
                android:id="@+id/menuSubmitGallery"
                android:title="@string/gallery"
                android:icon="@android:drawable/ic_menu_gallery"/>
            <item
                android:id="@+id/menuSubmitCamera"
                android:title="@string/camera"
                android:icon="@android:drawable/ic_menu_camera"/>
        </menu>
    </item>

</menu>